# tff_bench

./: CentralizedDataset.py  Dockerfile  LICENSE  README.md  TODO_NEXT.md  build_experiment.py  define_flags.py  define_task_flags.py  emnist_experiment.py  experiment.py  hparams.bash  main.py  main2.py  old_main.py  pyproject.toml  run_example  run_example.ps1  stuff_for_training_loop.md
builders/aggregation/: __init__.py
builders/broadcast/: __init__.py
builders/iterative_process/: __init__.py
grfu/: __init__.py
grfu/optimization/: __init__.py  keras_callbacks.py  optimizer_utils.py
grfu/utils/: __init__.py  centralized_training_loop.py  training_loop.py
iterative_process_builders/: build_experiment.py
learning_tasks/: cifar100.py  federated_emnist.py
main/: federated_trainer.py
optimization/cifar100/: federated_cifar100.py
optimization/shared/: dp_metrics.py
